modified block to only put on a message stream

--- a/grc/sidekiq_nmea.block.yml
+++ b/grc/sidekiq_nmea.block.yml
@@ -44,9 +44,9 @@ outputs:
 #  vlen: ...
 #  optional: ...
 
-- label: out
-  domain: stream
-  dtype: byte 
+#- label: out
+#  domain: stream
+#  dtype: byte 
 #  vlen: ...
 #  optional: ...
 
