document and cleanup

--- a/grc/sidekiq_nmea.block.yml
+++ b/grc/sidekiq_nmea.block.yml
@@ -30,7 +30,7 @@ parameters:
 #      * dtype (e.g. int, float, complex, byte, short, xxx_vector, ...)
 #      * vlen (optional - data stream vector length. Default is 1)
 #      * optional (optional - set to 1 for optional inputs. Default is 0)
-inputs:
+#inputs:
 #- label: ...
 #  domain: ...
 #  dtype: ...
