--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -14,8 +14,8 @@ include(GrPlatform) #define LIB_SUFFIX
 list(APPEND sidekiq_sources
     sidekiq_tx_impl.cc
     sidekiq_rx_impl.cc
-    telemetry_impl.cc
-)
+    #telemetry_impl.cc
+    )
 
 
 # This will run the FindSidekiq.cmake in cmake/Modules directory
